<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/green"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/constraint1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sửa thông tin"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/constraint1"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/edt_ten"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/HoTen"
            android:textStyle="bold"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/user"
            android:paddingStart="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        <EditText
            android:id="@+id/edt_quequan"
            android:paddingStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/quequan"
            android:textStyle="bold"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/location"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        />
        <EditText
            android:id="@+id/edt_ngaysinh"
            android:inputType="datetime"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/ngaysinh"
            android:textStyle="bold"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/calendar"
            android:paddingStart="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        <Button
            android:id="@+id/btn_update"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/continue_button"
            android:text="Cập nhật"
            android:textColor="@color/white"
            android:layout_marginHorizontal="30dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>